# saturn

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  ProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
docs/: README.md  event-types.md
docs/architecture/: cache-buff-arch.md  ide-arch-process.md  ide-arch.md
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/common/common/: CMakeLists.txt  character.hpp  containerTypes.hpp  types.hpp
src/common/common/logging/: CMakeLists.txt  log.cpp  log.hpp
src/core/: CMakeLists.txt  core.cpp  core.hpp
src/editor/: CMakeLists.txt  core.cpp  core.hpp  runEditor.cpp  runEditor.hpp
src/editor/rasterizer/: CMakeLists.txt  rasterizer.cpp  rasterizer.hpp
src/editor/render/: CMakeLists.txt  clock.cpp  frameClock.cpp  frameClock.hpp  glfwCallbacks.cpp  glfwCallbacks.hpp  loadFont.cpp  loadFont.hpp  renderInit.cpp  renderInit.hpp  renderText.cpp  renderText.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/ide/: CMakeLists.txt  core.cpp  core.hpp  runIDE.cpp  runIDE.hpp
src/ide/render/: clock.hpp  glLog.hpp  glfwCallbacks.hpp  loadFont.hpp  renderInit.hpp
src/logging/: CMakeLists.txt  logging.cpp  logging.hpp
src/rasterizer/: CMakeLists.txt  rasterizer.cpp  rasterizer.hpp
src/render/: CMakeLists.txt  glfwInit.cpp  glfwInit.hpp  glfwMain.hpp  renderInit.cpp  window.cpp  window.hpp
test/: CMakeLists.txt  tests.cpp
