add_library(saturn_render
  renderMain.hpp
  renderInit.hpp
  renderInit.cpp
  window.hpp
  window.cpp
  glfwCallbacks.hpp
  glfwCallbacks.cpp
  loadFont.hpp
  loadFont.cpp
  shader.hpp
  shader.cpp
  renderText.hpp
  renderText.cpp
  clock.hpp
  clock.cpp
  glLog.hpp)

target_link_libraries(saturn_render
  PRIVATE
  glad
  glfw
  dl
  CONAN_PKG::glm
  project_options
  project_warnings
  saturn_rasterizer
  saturn_common)
